Bug #7451 mysqld has old_password, mysqladmin continues assign passwords in new format
Submitted: 21 Dec 2004 11:10 Modified: 12 Jan 2005 21:16
Reporter: Gleb Paharenko
Status: Closed
Category:Client Severity:S3 (Non-critical)
Version:4.1.8 OS:Linux (Linux)
Assigned to: Jim Winstead Target Version:

[21 Dec 2004 11:10] Gleb Paharenko
Description:
mysqld have been started with old_password in config file.
grant sets password in old format. mysqladmin sets password in new
long format.

How to repeat:
mysql> show variables like '%old_password%';
+---------------+-------+
| Variable_name | Value |
+---------------+-------+
| old_passwords | ON    |
+---------------+-------+

mysql> select user,password from user where user='vasja';
+-------+------------------+
| user  | password         |
+-------+------------------+
| vasja | 6067079d6665cd0e |
+-------+------------------+

[gleb@toyou mysql-debug-4.1.8-pc-linux-i686]$ ./bin/mysqladmin --defaults-file=my.cnf  -u
vasja -p password v

mysql> select user,password from user where user='vasja';
+-------+-------------------------------------------+
| user  | password                                  |
+-------+-------------------------------------------+
| vasja | *EB84068A03583667A2AD4D9835ADCF42B1F25D2D |
+-------+-------------------------------------------+

Suggested fix:
Add command line option for mysqladmin in which we can specify
that passwords should be stored in old format.
[5 Jan 2005 21:59] Jim Winstead
With the proposed patch, mysqladmin queries the server to find out when
old_passwords is turned on, or to see if it is talking to a pre-4.1 server.
[12 Jan 2005 21:16] Paul DuBois
Mentioned in 4.1.9 change log.